see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

19-Oct-2009 Ian MacLennan
 # Fixed updated Uploader to reload Files frame

18-Oct-2009 Mark Dexter
# Fix problems in jos_menu, jos_categories sample data

18-Oct-2009 Ron Severdia
+ Version 0.1 of Austere template

17-Oct-2009 Ron Severdia
+ New icons, CSS

17-Oct-2009 Hannes Papenberg
# Fixed some bugs with the menu manager and modal windows
+ Added Article linker plugin for editors
^ Merged editor windows for article editing
^ Added/Fixed access field in newsfeeds
^ Moved com_messages links in admin menu to component menu
^ com_templates now uses codemirror to edit HTML

16-Oct-2009 Ron Severdia
^ Extension Manager fixes
^ Language fixes
+ New warning CSS

15-Oct-2009 Ron Severdia
# BlueStork UI fixes
^ Replace tables
+ Language fixes

15-Oct-2009 Hannes Papenberg
# Fixed saving in com_modules

14-Oct-2009 Elin Waring
# Fix link creation when the layout is not called default. 
# Update/add access code for weblinks and contacts.  Fix typos.
# Correct errors in sample data. Correct errors in joomla.sql (add s to user), add xml for com_users front end.
# Add required="true" to required elements.
^ Add modal linked user picker for com_contact. Clean up contact picker modal.

13-Oct-2009 Ron Severdia
# CSS and UI fixes for JForm radio button changes.
# UI fixes with new JForm class

14-Oct-2009 Andrew Eddie
+ Added languages to base install data.
! Consistency updates to backend Newsfeeds component.
+ Added access and language fields to newsfeeds table.
^ Refactored schema of newsfeeds table.
^ Rolled tight coupling of asset name out of JControllerForm.